chart-repository/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: chartmuseum-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - charts.torresj.com
    secretName: chartmuseum-secret
  rules:
  - host: charts.torresj.com
    http:
      paths:
      - backend:
          serviceName: good-aardvark-chartmuseum
          servicePort: 8080
